--- a/index.html
+++ b/index.html
@@ -1,1 +1,92 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/style/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet"> 
+
+  <title>Document</title>
+</head>
+<body>
+  <div class="page">
+  <header class="header_container">
+    <section class="figure_container">
+      <img class="mypic" src="assets/pic/pic.jpg" alt="My picture.jpg" >      
+    </section>
+    <section class="my_name">
+      <h1 class="name">Sergei Sokolovskiy</h1>
+      <h3 class="name">Front-end developer</h3>
+    </section>
+  </header>
+  <main class="main_container">
+    <section class="mainleft">
+      <article>
+      <h2>Contacts</h2>
+      <ul>
+        <li><b>Phone:</b> +375292505881</li>
+        <li><b>E-Mail:</b> snsokolovskiy@gmail.com</li>
+        <li><b>GitHub:</b><a href="https://github.com/whiteskyfalcon"> whiteskyfalcon</a></li>
+        <li><b>Discord:</b> whiteskyfalcon</li>
+      </ul>
+     </article>
+     <article>
+      <h2>Skills</h2>
+      <ul>
+        <li>HTML&CSS</li>
+        <li>JavaScript</li>
+        <li>Git/GitHub</li>
+        <li>Figma</li>
+      </ul>
+     </article>
+     <article>
+      <h2>Languages</h2>
+      <ul>
+        <li><b>Russian</b> - native</li>
+        <li><b>English</b> - A2/B1 </li>
+      </ul>
+     </article>
+    </section>
+    <section class="mainright">
+      <section>
+        <h2 class="h2">About me:</h2>
+        <p class="p_about">Hi! I want to get more interest work so now I learning Front-End. </p>
+      </section>
+      <section>
+        <h2 class="h2">Education:</h2>
+        <ul>
+          <li><h4>Belarusian State Economical University (BSEU)</h4></li>
+          <li><h4>Udemy</h4>
+              <p class="pp">HTML&CSS</p></li>
+          <li><h4>RSS School</h4>
+              <p class="pp">Front-End (2021S3)<p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 class="h2">Example of code:</h2>
+        <code>
+          <pre class="code">
+              javascript
+                const func = (num) => {
+                if (num > 0) {
+                return num - 1;
+                }
+                return num + 1;
+                };
+          </pre>
+        </code>
+      </section>
+    </section>
+  </main>
+  <footer class="footer_container">
+    <div class="my_git"><a href="https://github.com/whiteskyfalcon" ><img class="my_git_img"src="assets/img/github.svg" alt="github.svg"></a></div>
+    <div class="copyright">2021</div>
+    <div><a href="https://rs.school/js/"><img class="rss_img" src="assets/img/rs_school_js.svg" alt="https://rs.school/js/"></a></div>
+  </footer>
+</div>
+</body>
+</html>
